src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    comment
    constant
    eofcomment
    eofstring
    unfinished_string

Grammar

Rule 0     S' -> program
Rule 1     program -> classdec program
Rule 2     program -> classdec
Rule 3     empty -> <empty>
Rule 4     classdec -> class type lbracket featurelist rbracket pcoma
Rule 5     classdec -> class type inherits type lbracket featurelist rbracket pcoma
Rule 6     featurelist -> feature featurelist
Rule 7     featurelist -> empty
Rule 8     feature -> attribute pcoma
Rule 9     feature -> methoddef pcoma
Rule 10    expression -> constantexp
Rule 11    expression -> identifier
Rule 12    expression -> assignment
Rule 13    expression -> dispatch
Rule 14    expression -> conditional
Rule 15    expression -> loopexp
Rule 16    expression -> blockexp
Rule 17    expression -> letexp
Rule 18    expression -> caseexp
Rule 19    expression -> newexp
Rule 20    expression -> isvoidexp
Rule 21    expression -> aritmetica
Rule 22    expression -> comparison
Rule 23    expression -> parenexpression
Rule 24    methoddef -> id lparen rparen dpoint type lbracket expression rbracket
Rule 25    methoddef -> id lparen param paramslistdef rparen dpoint type lbracket expression rbracket
Rule 26    expressionlist -> expression pcoma expressionlist
Rule 27    expressionlist -> empty
Rule 28    param -> id dpoint type
Rule 29    attribute -> id dpoint type
Rule 30    attribute -> id dpoint type assign expression
Rule 31    letattributelist -> coma attribute letattributelist
Rule 32    letattributelist -> empty
Rule 33    paramslistdef -> coma param paramslistdef
Rule 34    paramslistdef -> empty
Rule 35    dispatch -> id lparen rparen
Rule 36    dispatch -> id lparen expression expressionparams rparen
Rule 37    dispatch -> expression point id lparen rparen
Rule 38    dispatch -> expression point id lparen expression expressionparams rparen
Rule 39    dispatch -> expression arroba type point id lparen rparen
Rule 40    dispatch -> expression arroba type point id lparen expression expressionparams rparen
Rule 41    expressionparams -> coma expression expressionparams
Rule 42    expressionparams -> empty
Rule 43    conditional -> if expression then expression else expression fi
Rule 44    loopexp -> while expression loop expression pool
Rule 45    blockexp -> lbracket expressionlist rbracket
Rule 46    letexp -> let attribute letattributelist in expression
Rule 47    caseexp -> case expression of subcase listcase esac
Rule 48    listcase -> subcase listcase
Rule 49    listcase -> empty
Rule 50    subcase -> id dpoint type implica expression pcoma
Rule 51    newexp -> new type
Rule 52    isvoidexp -> isvoid expression
Rule 53    aritmetica -> expression plus expression
Rule 54    aritmetica -> expression minus expression
Rule 55    aritmetica -> expression mult expression
Rule 56    aritmetica -> expression div expression
Rule 57    aritmetica -> intnot expression
Rule 58    comparison -> expression less expression
Rule 59    comparison -> expression lesse expression
Rule 60    comparison -> expression equal expression
Rule 61    comparison -> not expression
Rule 62    parenexpression -> lparen expression rparen
Rule 63    constantexp -> number
Rule 64    constantexp -> string
Rule 65    constantexp -> true
Rule 66    constantexp -> false
Rule 67    identifier -> id
Rule 68    assignment -> id assign expression

Terminals, with rules where they appear

arroba               : 39 40
assign               : 30 68
case                 : 47
class                : 4 5
coma                 : 31 33 41
comment              : 
constant             : 
div                  : 56
dpoint               : 24 25 28 29 30 50
else                 : 43
eofcomment           : 
eofstring            : 
equal                : 60
error                : 
esac                 : 47
false                : 66
fi                   : 43
id                   : 24 25 28 29 30 35 36 37 38 39 40 50 67 68
if                   : 43
implica              : 50
in                   : 46
inherits             : 5
intnot               : 57
isvoid               : 52
lbracket             : 4 5 24 25 45
less                 : 58
lesse                : 59
let                  : 46
loop                 : 44
lparen               : 24 25 35 36 37 38 39 40 62
minus                : 54
mult                 : 55
new                  : 51
not                  : 61
number               : 63
of                   : 47
pcoma                : 4 5 8 9 26 50
plus                 : 53
point                : 37 38 39 40
pool                 : 44
rbracket             : 4 5 24 25 45
rparen               : 24 25 35 36 37 38 39 40 62
string               : 64
then                 : 43
true                 : 65
type                 : 4 5 5 24 25 28 29 30 39 40 50 51
unfinished_string    : 
while                : 44

Nonterminals, with rules where they appear

aritmetica           : 21
assignment           : 12
attribute            : 8 31 46
blockexp             : 16
caseexp              : 18
classdec             : 1 2
comparison           : 22
conditional          : 14
constantexp          : 10
dispatch             : 13
empty                : 7 27 32 34 42 49
expression           : 24 25 26 30 36 37 38 38 39 40 40 41 43 43 43 44 44 46 47 50 52 53 53 54 54 55 55 56 56 57 58 58 59 59 60 60 61 62 68
expressionlist       : 26 45
expressionparams     : 36 38 40 41
feature              : 6
featurelist          : 4 5 6
identifier           : 11
isvoidexp            : 20
letattributelist     : 31 46
letexp               : 17
listcase             : 47 48
loopexp              : 15
methoddef            : 9
newexp               : 19
param                : 25 33
paramslistdef        : 25 33
parenexpression      : 23
program              : 1 0
subcase              : 47 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classdec program
    (2) program -> . classdec
    (4) classdec -> . class type lbracket featurelist rbracket pcoma
    (5) classdec -> . class type inherits type lbracket featurelist rbracket pcoma

    class           shift and go to state 3

    program                        shift and go to state 1
    classdec                       shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> classdec . program
    (2) program -> classdec .
    (1) program -> . classdec program
    (2) program -> . classdec
    (4) classdec -> . class type lbracket featurelist rbracket pcoma
    (5) classdec -> . class type inherits type lbracket featurelist rbracket pcoma

    $end            reduce using rule 2 (program -> classdec .)
    class           shift and go to state 3

    classdec                       shift and go to state 2
    program                        shift and go to state 4

state 3

    (4) classdec -> class . type lbracket featurelist rbracket pcoma
    (5) classdec -> class . type inherits type lbracket featurelist rbracket pcoma

    type            shift and go to state 5


state 4

    (1) program -> classdec program .

    $end            reduce using rule 1 (program -> classdec program .)


state 5

    (4) classdec -> class type . lbracket featurelist rbracket pcoma
    (5) classdec -> class type . inherits type lbracket featurelist rbracket pcoma

    lbracket        shift and go to state 6
    inherits        shift and go to state 7


state 6

    (4) classdec -> class type lbracket . featurelist rbracket pcoma
    (6) featurelist -> . feature featurelist
    (7) featurelist -> . empty
    (8) feature -> . attribute pcoma
    (9) feature -> . methoddef pcoma
    (3) empty -> .
    (29) attribute -> . id dpoint type
    (30) attribute -> . id dpoint type assign expression
    (24) methoddef -> . id lparen rparen dpoint type lbracket expression rbracket
    (25) methoddef -> . id lparen param paramslistdef rparen dpoint type lbracket expression rbracket

    rbracket        reduce using rule 3 (empty -> .)
    id              shift and go to state 13

    featurelist                    shift and go to state 8
    feature                        shift and go to state 9
    empty                          shift and go to state 10
    attribute                      shift and go to state 11
    methoddef                      shift and go to state 12

state 7

    (5) classdec -> class type inherits . type lbracket featurelist rbracket pcoma

    type            shift and go to state 14


state 8

    (4) classdec -> class type lbracket featurelist . rbracket pcoma

    rbracket        shift and go to state 15


state 9

    (6) featurelist -> feature . featurelist
    (6) featurelist -> . feature featurelist
    (7) featurelist -> . empty
    (8) feature -> . attribute pcoma
    (9) feature -> . methoddef pcoma
    (3) empty -> .
    (29) attribute -> . id dpoint type
    (30) attribute -> . id dpoint type assign expression
    (24) methoddef -> . id lparen rparen dpoint type lbracket expression rbracket
    (25) methoddef -> . id lparen param paramslistdef rparen dpoint type lbracket expression rbracket

    rbracket        reduce using rule 3 (empty -> .)
    id              shift and go to state 13

    feature                        shift and go to state 9
    featurelist                    shift and go to state 16
    empty                          shift and go to state 10
    attribute                      shift and go to state 11
    methoddef                      shift and go to state 12

state 10

    (7) featurelist -> empty .

    rbracket        reduce using rule 7 (featurelist -> empty .)


state 11

    (8) feature -> attribute . pcoma

    pcoma           shift and go to state 17


state 12

    (9) feature -> methoddef . pcoma

    pcoma           shift and go to state 18


state 13

    (29) attribute -> id . dpoint type
    (30) attribute -> id . dpoint type assign expression
    (24) methoddef -> id . lparen rparen dpoint type lbracket expression rbracket
    (25) methoddef -> id . lparen param paramslistdef rparen dpoint type lbracket expression rbracket

    dpoint          shift and go to state 19
    lparen          shift and go to state 20


state 14

    (5) classdec -> class type inherits type . lbracket featurelist rbracket pcoma

    lbracket        shift and go to state 21


state 15

    (4) classdec -> class type lbracket featurelist rbracket . pcoma

    pcoma           shift and go to state 22


state 16

    (6) featurelist -> feature featurelist .

    rbracket        reduce using rule 6 (featurelist -> feature featurelist .)


state 17

    (8) feature -> attribute pcoma .

    id              reduce using rule 8 (feature -> attribute pcoma .)
    rbracket        reduce using rule 8 (feature -> attribute pcoma .)


state 18

    (9) feature -> methoddef pcoma .

    id              reduce using rule 9 (feature -> methoddef pcoma .)
    rbracket        reduce using rule 9 (feature -> methoddef pcoma .)


state 19

    (29) attribute -> id dpoint . type
    (30) attribute -> id dpoint . type assign expression

    type            shift and go to state 23


state 20

    (24) methoddef -> id lparen . rparen dpoint type lbracket expression rbracket
    (25) methoddef -> id lparen . param paramslistdef rparen dpoint type lbracket expression rbracket
    (28) param -> . id dpoint type

    rparen          shift and go to state 25
    id              shift and go to state 24

    param                          shift and go to state 26

state 21

    (5) classdec -> class type inherits type lbracket . featurelist rbracket pcoma
    (6) featurelist -> . feature featurelist
    (7) featurelist -> . empty
    (8) feature -> . attribute pcoma
    (9) feature -> . methoddef pcoma
    (3) empty -> .
    (29) attribute -> . id dpoint type
    (30) attribute -> . id dpoint type assign expression
    (24) methoddef -> . id lparen rparen dpoint type lbracket expression rbracket
    (25) methoddef -> . id lparen param paramslistdef rparen dpoint type lbracket expression rbracket

    rbracket        reduce using rule 3 (empty -> .)
    id              shift and go to state 13

    featurelist                    shift and go to state 27
    feature                        shift and go to state 9
    empty                          shift and go to state 10
    attribute                      shift and go to state 11
    methoddef                      shift and go to state 12

state 22

    (4) classdec -> class type lbracket featurelist rbracket pcoma .

    class           reduce using rule 4 (classdec -> class type lbracket featurelist rbracket pcoma .)
    $end            reduce using rule 4 (classdec -> class type lbracket featurelist rbracket pcoma .)


state 23

    (29) attribute -> id dpoint type .
    (30) attribute -> id dpoint type . assign expression

    pcoma           reduce using rule 29 (attribute -> id dpoint type .)
    coma            reduce using rule 29 (attribute -> id dpoint type .)
    in              reduce using rule 29 (attribute -> id dpoint type .)
    assign          shift and go to state 28


state 24

    (28) param -> id . dpoint type

    dpoint          shift and go to state 29


state 25

    (24) methoddef -> id lparen rparen . dpoint type lbracket expression rbracket

    dpoint          shift and go to state 30


state 26

    (25) methoddef -> id lparen param . paramslistdef rparen dpoint type lbracket expression rbracket
    (33) paramslistdef -> . coma param paramslistdef
    (34) paramslistdef -> . empty
    (3) empty -> .

    coma            shift and go to state 32
    rparen          reduce using rule 3 (empty -> .)

    paramslistdef                  shift and go to state 31
    empty                          shift and go to state 33

state 27

    (5) classdec -> class type inherits type lbracket featurelist . rbracket pcoma

    rbracket        shift and go to state 34


state 28

    (30) attribute -> id dpoint type assign . expression
    (10) expression -> . constantexp
    (11) expression -> . identifier
    (12) expression -> . assignment
    (13) expression -> . dispatch
    (14) expression -> . conditional
    (15) expression -> . loopexp
    (16) expression -> . blockexp
    (17) expression -> . letexp
    (18) expression -> . caseexp
    (19) expression -> . newexp
    (20) expression -> . isvoidexp
    (21) expression -> . aritmetica
    (22) expression -> . comparison
    (23) expression -> . parenexpression
    (63) constantexp -> . number
    (64) constantexp -> . string
    (65) constantexp -> . true
    (66) constantexp -> . false
    (67) identifier -> . id
    (68) assignment -> . id assign expression
    (35) dispatch -> . id lparen rparen
    (36) dispatch -> . id lparen expression expressionparams rparen
    (37) dispatch -> . expression point id lparen rparen
    (38) dispatch -> . expression point id lparen expression expressionparams rparen
    (39) dispatch -> . expression arroba type point id lparen rparen
    (40) dispatch -> . expression arroba type point id lparen expression expressionparams rparen
    (43) conditional -> . if expression then expression else expression fi
    (44) loopexp -> . while expression loop expression pool
    (45) blockexp -> . lbracket expressionlist rbracket
    (46) letexp -> . let attribute letattributelist in expression
    (47) caseexp -> . case expression of subcase listcase esac
    (51) newexp -> . new type
    (52) isvoidexp -> . isvoid expression
    (53) aritmetica -> . expression plus expression
    (54) aritmetica -> . expression minus expression
    (55) aritmetica -> . expression mult expression
    (56) aritmetica -> . expression div expression
    (57) aritmetica -> . intnot expression
    (58) comparison -> . expression less expression
    (59) comparison -> . expression lesse expression
    (60) comparison -> . expression equal expression
    (61) comparison -> . not expression
    (62) parenexpression -> . lparen expression rparen

    number          shift and go to state 51
    string          shift and go to state 52
    true            shift and go to state 53
    false           shift and go to state 54
    id              shift and go to state 35
    if              shift and go to state 56
    while           shift and go to state 57
    lbracket        shift and go to state 58
    let             shift and go to state 59
    case            shift and go to state 60
    new             shift and go to state 61
    isvoid          shift and go to state 62
    intnot          shift and go to state 63
    not             shift and go to state 64
    lparen          shift and go to state 55

    expression                     shift and go to state 36
    constantexp                    shift and go to state 37
    identifier                     shift and go to state 38
    assignment                     shift and go to state 39
    dispatch                       shift and go to state 40
    conditional                    shift and go to state 41
    loopexp                        shift and go to state 42
    blockexp                       shift and go to state 43
    letexp                         shift and go to state 44
    caseexp                        shift and go to state 45
    newexp                         shift and go to state 46
    isvoidexp                      shift and go to state 47
    aritmetica                     shift and go to state 48
    comparison                     shift and go to state 49
    parenexpression                shift and go to state 50

state 29

    (28) param -> id dpoint . type

    type            shift and go to state 65


state 30

    (24) methoddef -> id lparen rparen dpoint . type lbracket expression rbracket

    type            shift and go to state 66


state 31

    (25) methoddef -> id lparen param paramslistdef . rparen dpoint type lbracket expression rbracket

    rparen          shift and go to state 67


state 32

    (33) paramslistdef -> coma . param paramslistdef
    (28) param -> . id dpoint type

    id              shift and go to state 24

    param                          shift and go to state 68

state 33

    (34) paramslistdef -> empty .

    rparen          reduce using rule 34 (paramslistdef -> empty .)


state 34

    (5) classdec -> class type inherits type lbracket featurelist rbracket . pcoma

    pcoma           shift and go to state 69


state 35

    (67) identifier -> id .
    (68) assignment -> id . assign expression
    (35) dispatch -> id . lparen rparen
    (36) dispatch -> id . lparen expression expressionparams rparen

    point           reduce using rule 67 (identifier -> id .)
    arroba          reduce using rule 67 (identifier -> id .)
    plus            reduce using rule 67 (identifier -> id .)
    minus           reduce using rule 67 (identifier -> id .)
    mult            reduce using rule 67 (identifier -> id .)
    div             reduce using rule 67 (identifier -> id .)
    less            reduce using rule 67 (identifier -> id .)
    lesse           reduce using rule 67 (identifier -> id .)
    equal           reduce using rule 67 (identifier -> id .)
    pcoma           reduce using rule 67 (identifier -> id .)
    coma            reduce using rule 67 (identifier -> id .)
    in              reduce using rule 67 (identifier -> id .)
    rparen          reduce using rule 67 (identifier -> id .)
    then            reduce using rule 67 (identifier -> id .)
    loop            reduce using rule 67 (identifier -> id .)
    of              reduce using rule 67 (identifier -> id .)
    rbracket        reduce using rule 67 (identifier -> id .)
    else            reduce using rule 67 (identifier -> id .)
    pool            reduce using rule 67 (identifier -> id .)
    fi              reduce using rule 67 (identifier -> id .)
    assign          shift and go to state 70
    lparen          shift and go to state 71


state 36

    (30) attribute -> id dpoint type assign expression .
    (37) dispatch -> expression . point id lparen rparen
    (38) dispatch -> expression . point id lparen expression expressionparams rparen
    (39) dispatch -> expression . arroba type point id lparen rparen
    (40) dispatch -> expression . arroba type point id lparen expression expressionparams rparen
    (53) aritmetica -> expression . plus expression
    (54) aritmetica -> expression . minus expression
    (55) aritmetica -> expression . mult expression
    (56) aritmetica -> expression . div expression
    (58) comparison -> expression . less expression
    (59) comparison -> expression . lesse expression
    (60) comparison -> expression . equal expression

    pcoma           reduce using rule 30 (attribute -> id dpoint type assign expression .)
    coma            reduce using rule 30 (attribute -> id dpoint type assign expression .)
    in              reduce using rule 30 (attribute -> id dpoint type assign expression .)
    point           shift and go to state 72
    arroba          shift and go to state 73
    plus            shift and go to state 74
    minus           shift and go to state 75
    mult            shift and go to state 76
    div             shift and go to state 77
    less            shift and go to state 78
    lesse           shift and go to state 79
    equal           shift and go to state 80


state 37

    (10) expression -> constantexp .

    point           reduce using rule 10 (expression -> constantexp .)
    arroba          reduce using rule 10 (expression -> constantexp .)
    plus            reduce using rule 10 (expression -> constantexp .)
    minus           reduce using rule 10 (expression -> constantexp .)
    mult            reduce using rule 10 (expression -> constantexp .)
    div             reduce using rule 10 (expression -> constantexp .)
    less            reduce using rule 10 (expression -> constantexp .)
    lesse           reduce using rule 10 (expression -> constantexp .)
    equal           reduce using rule 10 (expression -> constantexp .)
    pcoma           reduce using rule 10 (expression -> constantexp .)
    coma            reduce using rule 10 (expression -> constantexp .)
    in              reduce using rule 10 (expression -> constantexp .)
    rparen          reduce using rule 10 (expression -> constantexp .)
    then            reduce using rule 10 (expression -> constantexp .)
    loop            reduce using rule 10 (expression -> constantexp .)
    of              reduce using rule 10 (expression -> constantexp .)
    rbracket        reduce using rule 10 (expression -> constantexp .)
    else            reduce using rule 10 (expression -> constantexp .)
    pool            reduce using rule 10 (expression -> constantexp .)
    fi              reduce using rule 10 (expression -> constantexp .)


state 38

    (11) expression -> identifier .

    point           reduce using rule 11 (expression -> identifier .)
    arroba          reduce using rule 11 (expression -> identifier .)
    plus            reduce using rule 11 (expression -> identifier .)
    minus           reduce using rule 11 (expression -> identifier .)
    mult            reduce using rule 11 (expression -> identifier .)
    div             reduce using rule 11 (expression -> identifier .)
    less            reduce using rule 11 (expression -> identifier .)
    lesse           reduce using rule 11 (expression -> identifier .)
    equal           reduce using rule 11 (expression -> identifier .)
    pcoma           reduce using rule 11 (expression -> identifier .)
    coma            reduce using rule 11 (expression -> identifier .)
    in              reduce using rule 11 (expression -> identifier .)
    rparen          reduce using rule 11 (expression -> identifier .)
    then            reduce using rule 11 (expression -> identifier .)
    loop            reduce using rule 11 (expression -> identifier .)
    of              reduce using rule 11 (expression -> identifier .)
    rbracket        reduce using rule 11 (expression -> identifier .)
    else            reduce using rule 11 (expression -> identifier .)
    pool            reduce using rule 11 (expression -> identifier .)
    fi              reduce using rule 11 (expression -> identifier .)


state 39

    (12) expression -> assignment .

    point           reduce using rule 12 (expression -> assignment .)
    arroba          reduce using rule 12 (expression -> assignment .)
    plus            reduce using rule 12 (expression -> assignment .)
    minus           reduce using rule 12 (expression -> assignment .)
    mult            reduce using rule 12 (expression -> assignment .)
    div             reduce using rule 12 (expression -> assignment .)
    less            reduce using rule 12 (expression -> assignment .)
    lesse           reduce using rule 12 (expression -> assignment .)
    equal           reduce using rule 12 (expression -> assignment .)
    pcoma           reduce using rule 12 (expression -> assignment .)
    coma            reduce using rule 12 (expression -> assignment .)
    in              reduce using rule 12 (expression -> assignment .)
    rparen          reduce using rule 12 (expression -> assignment .)
    then            reduce using rule 12 (expression -> assignment .)
    loop            reduce using rule 12 (expression -> assignment .)
    of              reduce using rule 12 (expression -> assignment .)
    rbracket        reduce using rule 12 (expression -> assignment .)
    else            reduce using rule 12 (expression -> assignment .)
    pool            reduce using rule 12 (expression -> assignment .)
    fi              reduce using rule 12 (expression -> assignment .)


state 40

    (13) expression -> dispatch .

    point           reduce using rule 13 (expression -> dispatch .)
    arroba          reduce using rule 13 (expression -> dispatch .)
    plus            reduce using rule 13 (expression -> dispatch .)
    minus           reduce using rule 13 (expression -> dispatch .)
    mult            reduce using rule 13 (expression -> dispatch .)
    div             reduce using rule 13 (expression -> dispatch .)
    less            reduce using rule 13 (expression -> dispatch .)
    lesse           reduce using rule 13 (expression -> dispatch .)
    equal           reduce using rule 13 (expression -> dispatch .)
    pcoma           reduce using rule 13 (expression -> dispatch .)
    coma            reduce using rule 13 (expression -> dispatch .)
    in              reduce using rule 13 (expression -> dispatch .)
    rparen          reduce using rule 13 (expression -> dispatch .)
    then            reduce using rule 13 (expression -> dispatch .)
    loop            reduce using rule 13 (expression -> dispatch .)
    of              reduce using rule 13 (expression -> dispatch .)
    rbracket        reduce using rule 13 (expression -> dispatch .)
    else            reduce using rule 13 (expression -> dispatch .)
    pool            reduce using rule 13 (expression -> dispatch .)
    fi              reduce using rule 13 (expression -> dispatch .)


state 41

    (14) expression -> conditional .

    point           reduce using rule 14 (expression -> conditional .)
    arroba          reduce using rule 14 (expression -> conditional .)
    plus            reduce using rule 14 (expression -> conditional .)
    minus           reduce using rule 14 (expression -> conditional .)
    mult            reduce using rule 14 (expression -> conditional .)
    div             reduce using rule 14 (expression -> conditional .)
    less            reduce using rule 14 (expression -> conditional .)
    lesse           reduce using rule 14 (expression -> conditional .)
    equal           reduce using rule 14 (expression -> conditional .)
    pcoma           reduce using rule 14 (expression -> conditional .)
    coma            reduce using rule 14 (expression -> conditional .)
    in              reduce using rule 14 (expression -> conditional .)
    rparen          reduce using rule 14 (expression -> conditional .)
    then            reduce using rule 14 (expression -> conditional .)
    loop            reduce using rule 14 (expression -> conditional .)
    of              reduce using rule 14 (expression -> conditional .)
    rbracket        reduce using rule 14 (expression -> conditional .)
    else            reduce using rule 14 (expression -> conditional .)
    pool            reduce using rule 14 (expression -> conditional .)
    fi              reduce using rule 14 (expression -> conditional .)


state 42

    (15) expression -> loopexp .

    point           reduce using rule 15 (expression -> loopexp .)
    arroba          reduce using rule 15 (expression -> loopexp .)
    plus            reduce using rule 15 (expression -> loopexp .)
    minus           reduce using rule 15 (expression -> loopexp .)
    mult            reduce using rule 15 (expression -> loopexp .)
    div             reduce using rule 15 (expression -> loopexp .)
    less            reduce using rule 15 (expression -> loopexp .)
    lesse           reduce using rule 15 (expression -> loopexp .)
    equal           reduce using rule 15 (expression -> loopexp .)
    pcoma           reduce using rule 15 (expression -> loopexp .)
    coma            reduce using rule 15 (expression -> loopexp .)
    in              reduce using rule 15 (expression -> loopexp .)
    rparen          reduce using rule 15 (expression -> loopexp .)
    then            reduce using rule 15 (expression -> loopexp .)
    loop            reduce using rule 15 (expression -> loopexp .)
    of              reduce using rule 15 (expression -> loopexp .)
    rbracket        reduce using rule 15 (expression -> loopexp .)
    else            reduce using rule 15 (expression -> loopexp .)
    pool            reduce using rule 15 (expression -> loopexp .)
    fi              reduce using rule 15 (expression -> loopexp .)


state 43

    (16) expression -> blockexp .

    point           reduce using rule 16 (expression -> blockexp .)
    arroba          reduce using rule 16 (expression -> blockexp .)
    plus            reduce using rule 16 (expression -> blockexp .)
    minus           reduce using rule 16 (expression -> blockexp .)
    mult            reduce using rule 16 (expression -> blockexp .)
    div             reduce using rule 16 (expression -> blockexp .)
    less            reduce using rule 16 (expression -> blockexp .)
    lesse           reduce using rule 16 (expression -> blockexp .)
    equal           reduce using rule 16 (expression -> blockexp .)
    pcoma           reduce using rule 16 (expression -> blockexp .)
    coma            reduce using rule 16 (expression -> blockexp .)
    in              reduce using rule 16 (expression -> blockexp .)
    rparen          reduce using rule 16 (expression -> blockexp .)
    then            reduce using rule 16 (expression -> blockexp .)
    loop            reduce using rule 16 (expression -> blockexp .)
    of              reduce using rule 16 (expression -> blockexp .)
    rbracket        reduce using rule 16 (expression -> blockexp .)
    else            reduce using rule 16 (expression -> blockexp .)
    pool            reduce using rule 16 (expression -> blockexp .)
    fi              reduce using rule 16 (expression -> blockexp .)


state 44

    (17) expression -> letexp .

    point           reduce using rule 17 (expression -> letexp .)
    arroba          reduce using rule 17 (expression -> letexp .)
    plus            reduce using rule 17 (expression -> letexp .)
    minus           reduce using rule 17 (expression -> letexp .)
    mult            reduce using rule 17 (expression -> letexp .)
    div             reduce using rule 17 (expression -> letexp .)
    less            reduce using rule 17 (expression -> letexp .)
    lesse           reduce using rule 17 (expression -> letexp .)
    equal           reduce using rule 17 (expression -> letexp .)
    pcoma           reduce using rule 17 (expression -> letexp .)
    coma            reduce using rule 17 (expression -> letexp .)
    in              reduce using rule 17 (expression -> letexp .)
    rparen          reduce using rule 17 (expression -> letexp .)
    then            reduce using rule 17 (expression -> letexp .)
    loop            reduce using rule 17 (expression -> letexp .)
    of              reduce using rule 17 (expression -> letexp .)
    rbracket        reduce using rule 17 (expression -> letexp .)
    else            reduce using rule 17 (expression -> letexp .)
    pool            reduce using rule 17 (expression -> letexp .)
    fi              reduce using rule 17 (expression -> letexp .)


state 45

    (18) expression -> caseexp .

    point           reduce using rule 18 (expression -> caseexp .)
    arroba          reduce using rule 18 (expression -> caseexp .)
    plus            reduce using rule 18 (expression -> caseexp .)
    minus           reduce using rule 18 (expression -> caseexp .)
    mult            reduce using rule 18 (expression -> caseexp .)
    div             reduce using rule 18 (expression -> caseexp .)
    less            reduce using rule 18 (expression -> caseexp .)
    lesse           reduce using rule 18 (expression -> caseexp .)
    equal           reduce using rule 18 (expression -> caseexp .)
    pcoma           reduce using rule 18 (expression -> caseexp .)
    coma            reduce using rule 18 (expression -> caseexp .)
    in              reduce using rule 18 (expression -> caseexp .)
    rparen          reduce using rule 18 (expression -> caseexp .)
    then            reduce using rule 18 (expression -> caseexp .)
    loop            reduce using rule 18 (expression -> caseexp .)
    of              reduce using rule 18 (expression -> caseexp .)
    rbracket        reduce using rule 18 (expression -> caseexp .)
    else            reduce using rule 18 (expression -> caseexp .)
    pool            reduce using rule 18 (expression -> caseexp .)
    fi              reduce using rule 18 (expression -> caseexp .)


state 46

    (19) expression -> newexp .

    point           reduce using rule 19 (expression -> newexp .)
    arroba          reduce using rule 19 (expression -> newexp .)
    plus            reduce using rule 19 (expression -> newexp .)
    minus           reduce using rule 19 (expression -> newexp .)
    mult            reduce using rule 19 (expression -> newexp .)
    div             reduce using rule 19 (expression -> newexp .)
    less            reduce using rule 19 (expression -> newexp .)
    lesse           reduce using rule 19 (expression -> newexp .)
    equal           reduce using rule 19 (expression -> newexp .)
    pcoma           reduce using rule 19 (expression -> newexp .)
    coma            reduce using rule 19 (expression -> newexp .)
    in              reduce using rule 19 (expression -> newexp .)
    rparen          reduce using rule 19 (expression -> newexp .)
    then            reduce using rule 19 (expression -> newexp .)
    loop            reduce using rule 19 (expression -> newexp .)
    of              reduce using rule 19 (expression -> newexp .)
    rbracket        reduce using rule 19 (expression -> newexp .)
    else            reduce using rule 19 (expression -> newexp .)
    pool            reduce using rule 19 (expression -> newexp .)
    fi              reduce using rule 19 (expression -> newexp .)


state 47

    (20) expression -> isvoidexp .

    point           reduce using rule 20 (expression -> isvoidexp .)
    arroba          reduce using rule 20 (expression -> isvoidexp .)
    plus            reduce using rule 20 (expression -> isvoidexp .)
    minus           reduce using rule 20 (expression -> isvoidexp .)
    mult            reduce using rule 20 (expression -> isvoidexp .)
    div             reduce using rule 20 (expression -> isvoidexp .)
    less            reduce using rule 20 (expression -> isvoidexp .)
    lesse           reduce using rule 20 (expression -> isvoidexp .)
    equal           reduce using rule 20 (expression -> isvoidexp .)
    pcoma           reduce using rule 20 (expression -> isvoidexp .)
    coma            reduce using rule 20 (expression -> isvoidexp .)
    in              reduce using rule 20 (expression -> isvoidexp .)
    rparen          reduce using rule 20 (expression -> isvoidexp .)
    then            reduce using rule 20 (expression -> isvoidexp .)
    loop            reduce using rule 20 (expression -> isvoidexp .)
    of              reduce using rule 20 (expression -> isvoidexp .)
    rbracket        reduce using rule 20 (expression -> isvoidexp .)
    else            reduce using rule 20 (expression -> isvoidexp .)
    pool            reduce using rule 20 (expression -> isvoidexp .)
    fi              reduce using rule 20 (expression -> isvoidexp .)


state 48

    (21) expression -> aritmetica .

    point           reduce using rule 21 (expression -> aritmetica .)
    arroba          reduce using rule 21 (expression -> aritmetica .)
    plus            reduce using rule 21 (expression -> aritmetica .)
    minus           reduce using rule 21 (expression -> aritmetica .)
    mult            reduce using rule 21 (expression -> aritmetica .)
    div             reduce using rule 21 (expression -> aritmetica .)
    less            reduce using rule 21 (expression -> aritmetica .)
    lesse           reduce using rule 21 (expression -> aritmetica .)
    equal           reduce using rule 21 (expression -> aritmetica .)
    pcoma           reduce using rule 21 (expression -> aritmetica .)
    coma            reduce using rule 21 (expression -> aritmetica .)
    in              reduce using rule 21 (expression -> aritmetica .)
    rparen          reduce using rule 21 (expression -> aritmetica .)
    then            reduce using rule 21 (expression -> aritmetica .)
    loop            reduce using rule 21 (expression -> aritmetica .)
    of              reduce using rule 21 (expression -> aritmetica .)
    rbracket        reduce using rule 21 (expression -> aritmetica .)
    else            reduce using rule 21 (expression -> aritmetica .)
    pool            reduce using rule 21 (expression -> aritmetica .)
    fi              reduce using rule 21 (expression -> aritmetica .)


state 49

    (22) expression -> comparison .

    point           reduce using rule 22 (expression -> comparison .)
    arroba          reduce using rule 22 (expression -> comparison .)
    plus            reduce using rule 22 (expression -> comparison .)
    minus           reduce using rule 22 (expression -> comparison .)
    mult            reduce using rule 22 (expression -> comparison .)
    div             reduce using rule 22 (expression -> comparison .)
    less            reduce using rule 22 (expression -> comparison .)
    lesse           reduce using rule 22 (expression -> comparison .)
    equal           reduce using rule 22 (expression -> comparison .)
    pcoma           reduce using rule 22 (expression -> comparison .)
    coma            reduce using rule 22 (expression -> comparison .)
    in              reduce using rule 22 (expression -> comparison .)
    rparen          reduce using rule 22 (expression -> comparison .)
    then            reduce using rule 22 (expression -> comparison .)
    loop            reduce using rule 22 (expression -> comparison .)
    of              reduce using rule 22 (expression -> comparison .)
    rbracket        reduce using rule 22 (expression -> comparison .)
    else            reduce using rule 22 (expression -> comparison .)
    pool            reduce using rule 22 (expression -> comparison .)
    fi              reduce using rule 22 (expression -> comparison .)


state 50

    (23) expression -> parenexpression .

    point           reduce using rule 23 (expression -> parenexpression .)
    arroba          reduce using rule 23 (expression -> parenexpression .)
    plus            reduce using rule 23 (expression -> parenexpression .)
    minus           reduce using rule 23 (expression -> parenexpression .)
    mult            reduce using rule 23 (expression -> parenexpression .)
    div             reduce using rule 23 (expression -> parenexpression .)
    less            reduce using rule 23 (expression -> parenexpression .)
